# sipc

./: README.md  go.mod  go.sum
.ci/: node-get-protobuf-version.sh
.github/workflows/: build.yml  deploy-maven.yaml  deploy-npm.yaml  node-deploy.yaml  test.yml
cmd/test-single/: main.go
cpp/: CMakeLists.txt  protobuf-util.cmake
cpp/cmake/: FindProtobuf.cmake  Findabsl.cmake  FindgRPC.cmake  common.cmake
cpp/sample/: CMakeLists.txt  sample.cc  test_res.cc
docker/: Dockerfile  cpp.Dockerfile  java.Dockerfile
docs/: SAMPLE.md  connect-info.md  protocol.md  todo.md
go/: build-proto.sh
go/client/: client.go
go/server/: child.go  server.go
go/sipc_error/: errors.go
go/sipc_proto/: sipc.pb.go
go/test/: conn_bench_test.go  connected_test.go
go/transport/: transport_common.go  transport_darwin.go  transport_linux.go  transport_unix.go  transport_win.go  types.go
go/util/: buffer.go  buffer_test.go  chunk.go  packet.go  packet_test.go  promise.go  promise_test.go  socket.go
internal/promise/: promise.go  promise_test.go
java/: .gitignore  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts  test.Dockerfile
java/buildSrc/src/main/kotlin/: Version.kt
java/core/: build.gradle.kts
java/core/src/main/java/kr/jclab/sipc/: OsDetector.java
java/core/src/main/java/kr/jclab/sipc/client/: SipcClient.java  SipcClientChannelHandler.java
java/core/src/main/java/kr/jclab/sipc/client/internal/: ClientChannelInitializer.java  NamedPipeSipcClient.java  SipcTcpClient.java  (+3 more)
java/core/src/main/java/kr/jclab/sipc/exception/: NotYetConnectedException.java  SipcException.java  SipcHandshakeException.java  SipcHandshakeTimeoutException.java  SipcProcessDeadException.java
java/core/src/main/java/kr/jclab/sipc/internal/: ByteBufUtils.java  CantDecryptInboundException.java  DeferredInt.java  EventLoopHolder.java  InactiveHandler.java  InvalidConnectionInfoException.java  JnaSupport.java  NotifyMap.java  PacketCoder.java  PidAccessor.java  Process9Helper.java  SecureChannelError.java  SipcUtils.java  WindowsJnaSupport.java
java/core/src/main/java/kr/jclab/sipc/platform/: WindowsNativeSupport.java
java/core/src/main/java/kr/jclab/sipc/server/: SipcChild.java  SipcServer.java  SipcServerChannelHandler.java  SipcTcpServer.java
java/core/src/main/proto/: sipc.proto
java/core/src/test/java/: DevTest.java  LinuxTestUtil.java  TestUtil.java
java/sipc/: build.gradle
java/sipc-client-example/: build.gradle
java/sipc-client-example/src/main/java/kr/jclab/javautils/sipc/: SipcClientExampleApp.java
java/sipc/src/main/java/kr/jclab/javautils/sipc/: DataHandler.java  DefaultChannelType.java  SipcClient.java
java/sipc/src/test/java/: BsonTest.java  CryptoTest.java  DevelopTest01.java
java/sipc/src/test/java/fake/: PeeredIpcChannel.java
java/src/main/java/kr/jclab/javautils/sipc/: ProcessSipcHost.java  ProcessStdioSipcHost.java  ProtoMessageHouse.java  SecurityProviderHolder.java  SipcHost.java
java/src/main/java/kr/jclab/javautils/sipc/bson/: SipcBsonHelper.java
java/src/main/java/kr/jclab/javautils/sipc/channel/: AbstractIpcChannel.java  ChannelBase.java  ClientContext.java  FrameConverter.java  IpcChannel.java  IpcChannelListener.java  WrappedDataReceiver.java
java/src/main/java/kr/jclab/javautils/sipc/crypto/: CryptoException.java  EphemeralKeyAlgorithmFactory.java  EphemeralKeyPair.java  EphemeralKeyPairGenerator.java
java/src/main/java/kr/jclab/javautils/sipc/event/: CallerRequestContext.java  EventChannel.java
java/src/main/java/kr/jclab/javautils/sipc/grpc/: AbstractCallContext.java  AbstractMiddleGrpcChannel.java  ClientCallContext.java  ClientCallImpl.java  ContextRunnable.java  MetadataHelper.java  MiddleGrpcChannel.java  ServerCallContext.java  ServerCallImpl.java
java/src/test/java/: CryptoTest.java  DevelopTest01.java  GrpcTest.java
jni/: CMakeLists.txt  library.h
node/: .eslintrc.js  .gitignore  gen-proto.js  jest.config.js  package.json  tsconfig.json
node/src/: client.ts  event-channel.ts  index.ts  proto-message-house.ts
node/src/connect-info/: codec.ts  types.ts
node/src/crypto/: types.ts
node/src/host/: abstract-ipc-channel.ts  channel-host.ts  client-context.ts  ipc-channel-listener.ts  process-sipc-host.ts  request-context.ts  sipc-host.ts  tcp-channel-host.ts
node/src/proto/: sipc_pb.d.ts  sipc_pb.js
node/src/protocol/: frame-converter.ts  packet-reader.ts
node/util/: gen-proto.js  get-protobuf-version.js
proto/: sipc_frames.proto
sample-proto/: sample1.proto
(+49 files in other folders)
